# travelroboto

./: .env.template  .gitignore  README.md  cspell.json  pyproject.toml  railway.json  requirements.txt
.cspell/: words.txt
app/: config.py  logging_utils.py  main.py
app/application/ingest/: ports.py
app/chatbot/: conversation.py  llm_chains.py
app/data_pipeline/: pipeline.py
app/data_pipeline/extract/: gmail_extractor.py
app/data_pipeline/transform/: parse_flight_manifest.py
app/db/: base.py  chat_history_tables.py  init_db.py  session.py  tables.py  travel_tables.py
app/infrastructure/db/postgres/: base.py  init_db.py  session.py
app/infrastructure/llm/: chains.py
app/interfaces/: fastapi_web_ui.py  legacy_gradio_web_ui.py  web_ui.py
app/interfaces/web/static/: script.js  styles.css
app/interfaces/web/templates/: chat.html
app/schemas/: flight_manifest.py
app/services/: llm_chains.py
app/utils/: chat_helpers.py  secrets.py
docs/: product-requirements.md
notebooks/: llm_analysis.ipynb
tests/: README.md  test_ask_question.py
tests/data_generation/: generate_test_data.py
tests/reference/: generate_test_data_script_prompt.md  test_data_schema.sql
tests/test_data/: airports_test_data.csv  events_test_data.csv  flights_test_data.csv  hotel_reservations_test_data.csv  hotels_test_data.csv  test_itinerary.txt  traveler_event_test_data.csv  traveler_flight_test_data.csv  traveler_hotel_reservation_test_data.csv  traveler_trip_test_data.csv  travelers_test_data.csv  trips_test_data.csv
